syntax = "proto3";

option csharp_namespace = "HubSimulator.Domain.Protos";

import "Protos/minimal_message.proto";
import "Protos/minimal_hub_event.proto";
import "Protos/minimal_request_response.proto";

service MinimalHubService {
  // Core Message Methods
  rpc SubmitMessage(Message) returns (Message);
  rpc ValidateMessage(Message) returns (ValidationResponse);

  // Basic Event Methods
  rpc GetEvent(EventRequest) returns (HubEvent);

  // Essential Casts (Messages) Methods
  rpc GetCast(CastId) returns (Message);
  rpc GetCastsByFid(FidRequest) returns (MessagesResponse);
  rpc GetCastsByParent(CastsByParentRequest) returns (MessagesResponse);

  // Minimal User Data - needed for basic user context
  rpc GetUserDataByFid(FidRequest) returns (MessagesResponse);

  // Basic Hub Info
  rpc GetInfo(HubInfoRequest) returns (HubInfoResponse);
} 